unpackaged/objects/Shimei__c.object
<CustomObject>
    <fields>
        <fullName>ActualAge__c</fullName>
        <formula>IF(OR(MONTH( TODAY() )-MONTH( DateOfBirth__c )&gt;0,AND(MONTH(TODAY()) - MONTH(DateOfBirth__c )&gt;=0,DAY(TODAY()) - DAY(DateOfBirth__c )&gt;=0)),
YEAR(TODAY()) - YEAR(DateOfBirth__c ),
YEAR(TODAY()) - YEAR(DateOfBirth__c )-1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>実年齢</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>現住所</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Adjuster__c</fullName>
        <label>アジャスター</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>中国</fullName>
                </value>
                <value>
                    <fullName>香港</fullName>
                </value>
                <value>
                    <fullName>日本</fullName>
                </value>
                <value>
                    <fullName>マレーシア</fullName>
                </value>
                <value>
                    <fullName>ベトナム</fullName>
                </value>
                <value>
                    <fullName>インド</fullName>
                </value>
                <value>
                    <fullName>フィリピン</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>IF(OR(MONTH( DateOfBirth__c )&lt;4,AND(MONTH( DateOfBirth__c )=4,DAY( DateOfBirth__c )=1)), 
YEAR(TODAY()) - YEAR( DateOfBirth__c ), 
YEAR(TODAY()) - YEAR( DateOfBirth__c )-1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>4月1日時点での年齢</inlineHelpText>
        <label>満年齢</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agency__c</fullName>
        <label>代理店</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>中国</fullName>
                </value>
                <value>
                    <fullName>香港</fullName>
                </value>
                <value>
                    <fullName>日本</fullName>
                </value>
                <value>
                    <fullName>マレーシア</fullName>
                </value>
                <value>
                    <fullName>ベトナム</fullName>
                </value>
                <value>
                    <fullName>インド</fullName>
                </value>
                <value>
                    <fullName>フィリピン</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Broker__c</fullName>
        <label>ブローカー</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>中国</fullName>
                </value>
                <value>
                    <fullName>香港</fullName>
                </value>
                <value>
                    <fullName>日本</fullName>
                </value>
                <value>
                    <fullName>マレーシア</fullName>
                </value>
                <value>
                    <fullName>ベトナム</fullName>
                </value>
                <value>
                    <fullName>インド</fullName>
                </value>
                <value>
                    <fullName>フィリピン</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Busho__c</fullName>
        <label>部署</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>営業</fullName>
                </value>
                <value>
                    <fullName>総合サービス</fullName>
                </value>
                <value>
                    <fullName>危機管理情報</fullName>
                </value>
                <value>
                    <fullName>商品企画開発</fullName>
                </value>
                <value>
                    <fullName>健診</fullName>
                </value>
                <value>
                    <fullName>医療保険査定</fullName>
                </value>
                <value>
                    <fullName>自動車保険査定</fullName>
                </value>
                <value>
                    <fullName>公估</fullName>
                </value>
                <value>
                    <fullName>事務管理</fullName>
                </value>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>人事総務</fullName>
                </value>
                <value>
                    <fullName>財務</fullName>
                </value>
                <value>
                    <fullName>教育研修</fullName>
                </value>
                <value>
                    <fullName>業務統括</fullName>
                </value>
                <value>
                    <fullName>CS</fullName>
                </value>
                <value>
                    <fullName>Global Business</fullName>
                </value>
                <value>
                    <fullName>システム</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cd__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>社員：4桁数字
出向者：S+3桁数字
家族：F+3桁数字</inlineHelpText>
        <label>CD</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CompanyBusho__c</fullName>
        <formula>CASE(CompanyName__c, 
&quot;WB&quot;, &quot;WB&quot;, 
&quot;DP&quot;, &quot;DP&quot;,
&quot;WB上海ブローカー&quot;,&quot;BKR&quot;
,&quot;&quot;)  &amp;&quot;/&quot;&amp;  
CASE(Busho__c, 
&quot;営業&quot;, &quot;営業部&quot;, 
&quot;総合サービス&quot;, &quot;総サ部&quot;
,&quot;&quot;) &amp; 
IF (INCLUDES(Shokumu__c, &quot;総合サービス&quot;) , &quot; 総サ課&quot; , &quot;&quot;)</formula>
        <label>会社/部署</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompanyHouseKeiyakuRent__c</fullName>
        <label>（社宅）契約家賃</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CompanyHouseKeiyakuTimeLimit__c</fullName>
        <label>（社宅）契約期限</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CompanyHouseMoveIntoTimeLimit__c</fullName>
        <label>（社宅）入居期限</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CompanyHouseNote__c</fullName>
        <label>（社宅）備考</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CompanyHouseRentStandard__c</fullName>
        <label>（社宅）家賃基準</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CompanyHouseSelfPay_1__c</fullName>
        <label>（社宅）自己負担（1）</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CompanyHouseSelfPay_2__c</fullName>
        <label>（社宅）自己負担（2）</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CompanyName__c</fullName>
        <label>会社名</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>WB</fullName>
                    <default>true</default>
                    <label>WB</label>
                </value>
                <value>
                    <fullName>DP</fullName>
                </value>
                <value>
                    <fullName>WB上海ブローカー</fullName>
                </value>
                <value>
                    <fullName>ILA</fullName>
                </value>
                <value>
                    <fullName>ホールディングス</fullName>
                </value>
                <value>
                    <fullName>WB Holdings</fullName>
                </value>
                <value>
                    <fullName>WB Hong Kong</fullName>
                </value>
                <value>
                    <fullName>WB Brokers Hong Kong</fullName>
                </value>
                <value>
                    <fullName>WB ILA Hong Kong</fullName>
                </value>
                <value>
                    <fullName>WB Japan</fullName>
                </value>
                <value>
                    <fullName>WB Shanghai</fullName>
                </value>
                <value>
                    <fullName>WB Brokers China</fullName>
                </value>
                <value>
                    <fullName>WB LA China</fullName>
                </value>
                <value>
                    <fullName>WB Singapore</fullName>
                </value>
                <value>
                    <fullName>WB Malaysia</fullName>
                </value>
                <value>
                    <fullName>WB Thailand</fullName>
                </value>
                <value>
                    <fullName>WB Myanmar</fullName>
                </value>
                <value>
                    <fullName>WB Cambodia</fullName>
                </value>
                <value>
                    <fullName>WB Vietnam</fullName>
                </value>
                <value>
                    <fullName>WB India</fullName>
                </value>
                <value>
                    <fullName>WB Sri Lanka</fullName>
                </value>
                <value>
                    <fullName>WB Indonesia</fullName>
                </value>
                <value>
                    <fullName>WB Philippines</fullName>
                </value>
                <value>
                    <fullName>WB Canada</fullName>
                </value>
                <value>
                    <fullName>WB Mexico</fullName>
                </value>
                <value>
                    <fullName>WB France</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DateOfBirth__c</fullName>
        <label>生年月日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EmailCreateDate__c</fullName>
        <label>作成日付</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EmailDeleteDate__c</fullName>
        <label>削除日付</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EmailMei__c</fullName>
        <label>メールアドレス名</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailName__c</fullName>
        <label>メール表示名</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailPassword__c</fullName>
        <label>パスワード</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailSei2__c</fullName>
        <formula>&quot;WB&quot; &amp;   
IF (INCLUDES(Shokumu__c, &quot;AC&quot;) = TRUE, &quot; AC&quot;,  
IF(OR(INCLUDES(Shokumu__c,&quot;取締役&quot;) = TRUE,INCLUDES(Shokumu__c,&quot;代表取締役&quot;) =TRUE),&quot; &quot;,&quot; &quot;&amp;TEXT(KinmuArea__c) ) )</formula>
        <label>メールアドレス姓2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailSei__c</fullName>
        <label>メールアドレス姓</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_txt__c</fullName>
        <formula>IF ( EmailDeleteDate__c    &lt;=     TODAY() ,  &quot;&quot;, Email__c )</formula>
        <label>Emailアドレス</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmployArea__c</fullName>
        <label>採用地区</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>中国</fullName>
                </value>
                <value>
                    <fullName>香港</fullName>
                </value>
                <value>
                    <fullName>日本</fullName>
                </value>
                <value>
                    <fullName>インド</fullName>
                </value>
                <value>
                    <fullName>インドネシア</fullName>
                </value>
                <value>
                    <fullName>カナダ</fullName>
                </value>
                <value>
                    <fullName>カンボジア</fullName>
                </value>
                <value>
                    <fullName>シンガポール</fullName>
                </value>
                <value>
                    <fullName>スリランカ</fullName>
                </value>
                <value>
                    <fullName>タイ</fullName>
                </value>
                <value>
                    <fullName>フィリピン</fullName>
                </value>
                <value>
                    <fullName>ベトナム</fullName>
                </value>
                <value>
                    <fullName>マレーシア</fullName>
                </value>
                <value>
                    <fullName>ミャンマー</fullName>
                </value>
                <value>
                    <fullName>メキシコ</fullName>
                </value>
                <value>
                    <fullName>フランス</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EmploymentSystem__c</fullName>
        <label>雇用形態</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>試用期間</fullName>
                    <default>true</default>
                    <label>試用期間</label>
                </value>
                <value>
                    <fullName>正社員</fullName>
                </value>
                <value>
                    <fullName>契約社員</fullName>
                </value>
                <value>
                    <fullName>派遣社員</fullName>
                </value>
                <value>
                    <fullName>出向者</fullName>
                </value>
                <value>
                    <fullName>アルバイト</fullName>
                </value>
                <value>
                    <fullName>休職</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FamilyStaffName__c</fullName>
        <label>家族)社員名</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>社員の家族を登録する場合は、
チェックをつけます。</inlineHelpText>
        <label>家族</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <label>勤務国</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>中国</fullName>
                </value>
                <value>
                    <fullName>香港</fullName>
                </value>
                <value>
                    <fullName>日本</fullName>
                </value>
                <value>
                    <fullName>インド</fullName>
                </value>
                <value>
                    <fullName>インドネシア</fullName>
                </value>
                <value>
                    <fullName>カナダ</fullName>
                </value>
                <value>
                    <fullName>カンボジア</fullName>
                </value>
                <value>
                    <fullName>シンガポール</fullName>
                </value>
                <value>
                    <fullName>スリランカ</fullName>
                </value>
                <value>
                    <fullName>タイ</fullName>
                </value>
                <value>
                    <fullName>フィリピン</fullName>
                </value>
                <value>
                    <fullName>フランス</fullName>
                </value>
                <value>
                    <fullName>ブラジル</fullName>
                </value>
                <value>
                    <fullName>ベトナム</fullName>
                </value>
                <value>
                    <fullName>マレーシア</fullName>
                </value>
                <value>
                    <fullName>ミャンマー</fullName>
                </value>
                <value>
                    <fullName>メキシコ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <label>雇用会社名</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>WB</fullName>
                    <default>true</default>
                    <label>WB</label>
                </value>
                <value>
                    <fullName>DP</fullName>
                </value>
                <value>
                    <fullName>WB上海ブローカー</fullName>
                </value>
                <value>
                    <fullName>ILA</fullName>
                </value>
                <value>
                    <fullName>WB Holdings</fullName>
                </value>
                <value>
                    <fullName>WB Hong Kong</fullName>
                </value>
                <value>
                    <fullName>WB Brokers Hong Kong</fullName>
                </value>
                <value>
                    <fullName>WB ILA Hong Kong</fullName>
                </value>
                <value>
                    <fullName>WB Japan</fullName>
                </value>
                <value>
                    <fullName>WB Shanghai</fullName>
                </value>
                <value>
                    <fullName>WB Brokers China</fullName>
                </value>
                <value>
                    <fullName>WB LA China</fullName>
                </value>
                <value>
                    <fullName>WB Singapore</fullName>
                </value>
                <value>
                    <fullName>WB Malaysia</fullName>
                </value>
                <value>
                    <fullName>WB Thailand</fullName>
                </value>
                <value>
                    <fullName>WB Myanmar</fullName>
                </value>
                <value>
                    <fullName>WB Cambodia</fullName>
                </value>
                <value>
                    <fullName>WB Vietnam</fullName>
                </value>
                <value>
                    <fullName>WB India</fullName>
                </value>
                <value>
                    <fullName>WB Sri Lanka</fullName>
                </value>
                <value>
                    <fullName>WB Indonesia</fullName>
                </value>
                <value>
                    <fullName>WB Philippines</fullName>
                </value>
                <value>
                    <fullName>WB Canada</fullName>
                </value>
                <value>
                    <fullName>WB Mexico</fullName>
                </value>
                <value>
                    <fullName>WB France</fullName>
                </value>
                <value>
                    <fullName>ホールディングス</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field3__c</fullName>
        <formula>CASE(Busho__c, 
&quot;AC&quot;, &quot;AC&quot;
, CASE(CompanyName__c, 
&quot;WB&quot;, &quot;WB&quot;, 
&quot;DP&quot;,&quot;DP&quot;,
&quot;WB上海ブローカー&quot;,&quot;WB上海ブローカー&quot;,
&quot;ILA&quot;,&quot;ILA&quot;,
&quot;ホールディングス&quot;,&quot;ホールディングス&quot;,
&quot;&quot;))</formula>
        <label>(拠点集計用)会社名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gakureki__c</fullName>
        <label>最終学歴</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>大学院</fullName>
                </value>
                <value>
                    <fullName>大学</fullName>
                </value>
                <value>
                    <fullName>短大</fullName>
                </value>
                <value>
                    <fullName>専門学校</fullName>
                </value>
                <value>
                    <fullName>高専</fullName>
                </value>
                <value>
                    <fullName>高校</fullName>
                </value>
                <value>
                    <fullName>中学</fullName>
                </value>
                <value>
                    <fullName>不明</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JpAddress__c</fullName>
        <label>住所（日本）</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JpPostcd__c</fullName>
        <label>郵便番号（日本）</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JpTel__c</fullName>
        <label>TEL（日本）</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>KinkyuAddress_1__c</fullName>
        <label>（緊急）住所①</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>KinkyuAddress_2__c</fullName>
        <label>（緊急）住所②</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>KinkyuMobile_1__c</fullName>
        <label>（緊急）携帯電話番号/自宅TEL①</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>KinkyuMobile_2__c</fullName>
        <label>（緊急）携帯電話番号/自宅TEL②</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>KinkyuRelationship_1__c</fullName>
        <label>（緊急）続柄①</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>父</fullName>
                </value>
                <value>
                    <fullName>母</fullName>
                </value>
                <value>
                    <fullName>夫</fullName>
                </value>
                <value>
                    <fullName>妻</fullName>
                </value>
                <value>
                    <fullName>兄弟</fullName>
                </value>
                <value>
                    <fullName>姉妹</fullName>
                </value>
                <value>
                    <fullName>娘</fullName>
                </value>
                <value>
                    <fullName>息子</fullName>
                </value>
                <value>
                    <fullName>祖父</fullName>
                </value>
                <value>
                    <fullName>祖母</fullName>
                </value>
                <value>
                    <fullName>親戚</fullName>
                </value>
                <value>
                    <fullName>知人</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KinkyuRelationship_2__c</fullName>
        <label>（緊急）続柄②</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>父</fullName>
                </value>
                <value>
                    <fullName>母</fullName>
                </value>
                <value>
                    <fullName>夫</fullName>
                </value>
                <value>
                    <fullName>妻</fullName>
                </value>
                <value>
                    <fullName>兄弟</fullName>
                </value>
                <value>
                    <fullName>姉妹</fullName>
                </value>
                <value>
                    <fullName>娘</fullName>
                </value>
                <value>
                    <fullName>息子</fullName>
                </value>
                <value>
                    <fullName>祖父</fullName>
                </value>
                <value>
                    <fullName>祖母</fullName>
                </value>
                <value>
                    <fullName>親戚</fullName>
                </value>
                <value>
                    <fullName>知人</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KinkyuShimei_1__c</fullName>
        <label>（緊急）氏名①</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KinkyuShimei_2__c</fullName>
        <label>（緊急）氏名②</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KinmuArea__c</fullName>
        <label>勤務地区</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Field1__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>北京</fullName>
                </value>
                <value>
                    <fullName>天津</fullName>
                </value>
                <value>
                    <fullName>天津開発区</fullName>
                </value>
                <value>
                    <fullName>大連</fullName>
                </value>
                <value>
                    <fullName>青島</fullName>
                </value>
                <value>
                    <fullName>青島開発区</fullName>
                </value>
                <value>
                    <fullName>済寧</fullName>
                </value>
                <value>
                    <fullName>煙台</fullName>
                </value>
                <value>
                    <fullName>長春</fullName>
                </value>
                <value>
                    <fullName>瀋陽</fullName>
                </value>
                <value>
                    <fullName>上海</fullName>
                </value>
                <value>
                    <fullName>成都</fullName>
                </value>
                <value>
                    <fullName>重慶</fullName>
                </value>
                <value>
                    <fullName>杭州</fullName>
                </value>
                <value>
                    <fullName>寧波</fullName>
                </value>
                <value>
                    <fullName>平湖</fullName>
                </value>
                <value>
                    <fullName>鄭州</fullName>
                </value>
                <value>
                    <fullName>蘇州</fullName>
                </value>
                <value>
                    <fullName>無錫</fullName>
                </value>
                <value>
                    <fullName>昆山</fullName>
                </value>
                <value>
                    <fullName>南通</fullName>
                </value>
                <value>
                    <fullName>常州</fullName>
                </value>
                <value>
                    <fullName>常熟</fullName>
                </value>
                <value>
                    <fullName>南京</fullName>
                </value>
                <value>
                    <fullName>合肥</fullName>
                </value>
                <value>
                    <fullName>深圳</fullName>
                </value>
                <value>
                    <fullName>厦門</fullName>
                </value>
                <value>
                    <fullName>東莞</fullName>
                </value>
                <value>
                    <fullName>汕頭</fullName>
                </value>
                <value>
                    <fullName>福州</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KinzokuNensu__c</fullName>
        <formula>IF (NOT(ISBLANK(TaishokuDate__c)),
TEXT( 
FLOOR((((YEAR(TaishokuDate__c ) - YEAR(NyusyaDate__c ) - 1) *12) + (12 - MONTH(NyusyaDate__c ) +1) + MONTH(TaishokuDate__c ) - 1)/12) 
) &amp; &quot;年&quot; &amp; 
TEXT( 
MOD((((YEAR(TaishokuDate__c ) - YEAR(NyusyaDate__c ) - 1) *12) + (12 - MONTH(NyusyaDate__c ) +1) + MONTH(TaishokuDate__c ) - 1),12) 
) &amp; &quot;ヶ月&quot; 
,
IF(NOT(ISBLANK(NyusyaDate__c)) 
, 
TEXT( 
FLOOR((((YEAR(TODAY() ) - YEAR(NyusyaDate__c ) - 1) *12) + (12 - MONTH(NyusyaDate__c ) +1) + MONTH(TODAY() ) - 1)/12) 
) &amp; &quot;年&quot; &amp; 
TEXT( 
MOD((((YEAR(TODAY() ) - YEAR(NyusyaDate__c ) - 1) *12) + (12 - MONTH(NyusyaDate__c ) +1) + MONTH(TODAY() ) - 1),12) 
) &amp; &quot;ヶ月&quot; 
, null 
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>勤続年数</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Koseki__c</fullName>
        <label>戸籍</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LaborContractValidUntil__c</fullName>
        <label>労働契約期限</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MedicalShikaku__c</fullName>
        <label>医療資格</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>医師</fullName>
                </value>
                <value>
                    <fullName>看護師（日本）</fullName>
                </value>
                <value>
                    <fullName>看護師（現地）</fullName>
                </value>
                <value>
                    <fullName>准看護師（日本）</fullName>
                </value>
                <value>
                    <fullName>検査技師</fullName>
                </value>
                <value>
                    <fullName>鍼灸師</fullName>
                </value>
                <value>
                    <fullName>薬剤師</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MeiRoma__c</fullName>
        <label>名（ローマ字）</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>携帯電話番号</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Nationality__c</fullName>
        <label>国籍</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>日本</fullName>
                </value>
                <value>
                    <fullName>中国</fullName>
                </value>
                <value>
                    <fullName>香港</fullName>
                </value>
                <value>
                    <fullName>台湾</fullName>
                </value>
                <value>
                    <fullName>アメリカ</fullName>
                </value>
                <value>
                    <fullName>アルゼンチン</fullName>
                </value>
                <value>
                    <fullName>インド</fullName>
                </value>
                <value>
                    <fullName>インドネシア</fullName>
                </value>
                <value>
                    <fullName>カナダ</fullName>
                </value>
                <value>
                    <fullName>カンボジア</fullName>
                </value>
                <value>
                    <fullName>シンガポール</fullName>
                </value>
                <value>
                    <fullName>スリランカ</fullName>
                </value>
                <value>
                    <fullName>タイ</fullName>
                </value>
                <value>
                    <fullName>チベット</fullName>
                </value>
                <value>
                    <fullName>ネパール</fullName>
                </value>
                <value>
                    <fullName>フィリピン</fullName>
                </value>
                <value>
                    <fullName>ブラジル</fullName>
                </value>
                <value>
                    <fullName>ベトナム</fullName>
                </value>
                <value>
                    <fullName>マレーシア</fullName>
                </value>
                <value>
                    <fullName>ミャンマー</fullName>
                </value>
                <value>
                    <fullName>メキシコ</fullName>
                </value>
                <value>
                    <fullName>ラオス</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NoteSystem__c</fullName>
        <label>備考（システム部用）</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>備考</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NyusyaDate__c</fullName>
        <label>入社日付</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PassportDateOfExpiry__c</fullName>
        <label>パスポート有効期限</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PassportNo__c</fullName>
        <label>パスポート番号</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post__c</fullName>
        <label>職位</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postcd__c</fullName>
        <label>郵便番号</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SeiMeiRoma__c</fullName>
        <formula>MeiRoma__c &amp;&quot; &quot;&amp; SeiRoma__c</formula>
        <label>姓名（ローマ字）</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SeiRoma__c</fullName>
        <label>姓（ローマ字）</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServerPassword__c</fullName>
        <label>共有サーバーパスワード</label>
        <length>10</length>
        <type>Text</type>
    </fields>
</CustomObject>